# ROS-Challenges

./: README.md
Challenge 1/: ex3_v8_clean.launch
Challenge 2/map visualization script/nodes/: explorer_base.py  explorer_random.py  explorer_random_actions.py  explorer_random_services.py
Challenge 2/workspace/devel/: .catkin  setup.sh
Challenge 3/baxterchallenge/devel/: .catkin  .rosinstall  setup.sh
Challenge 3/baxterchallenge/src/baxter_challenge/: CMakeLists.txt
Challenge 3/baxterchallenge/src/baxter_challenge/launch/: baxter_world.launch  challenge.launch  challenge_sim.launch  solution.launch
Challenge 3/baxterchallenge/src/baxter_challenge/models/block/: blue_model.urdf  red_model.urdf
Challenge 3/baxterchallenge/src/baxter_challenge/models/tote/: blue_model.sdf  model.sdf  red_model.sdf
Challenge 3/baxterchallenge/src/baxter_challenge/msg/: BlockState.msg
Challenge 3/baxterchallenge/src/baxter_challenge/scripts/: arm_controller.py  helper.py  object_inspection_service.py  run_challenge.py  send_urdf_fragment.py
Challenge 3/baxterchallenge/src/baxter_challenge/srv/: ObjectInspection.srv
Challenge 3/baxterchallenge/src/baxter_challenge/urdf/: baxter.urdf.xacro  baxter_base.gazebo.xacro  baxter_base.urdf.xacro  left_end_effector.urdf.xacro  right_end_effector.urdf.xacro
Challenge 4/avp_challenge/: CMakeLists.txt  package.xml
challenge 2 stuff/: viz.py
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
src/kk-ch2/: package.xml  rosbrick_room
src/turtlebot_explorer/: explorer.rviz  readme.txt  topics.txt
(+86 files in other folders)
